js if statement exercise

--- a/index.html
+++ b/index.html
@@ -23,17 +23,14 @@
           <a href="./shecodes.io-week2/variables.js"> </a><br/>
         </li>
         <li> Javascript Variables Challenge
-          <a href="./shecodes.io-week2/variables.js"> </a><br/>
+          <a href="./shecodes.io-week2/variables-Challenge.js"> </a><br/>
         </li>
       </ul>
       <ul>
-        <li>
+        <li> Javascript in html
           <a href=""> </a><br/>
         </li>
-      </ul>
-      <li></li>
-      <ul>
-        <li>
+        <li>Javascript in html Challenge
           <a href=""> </a><br/>
         </li>
       </ul>
