--- a/index.html
+++ b/index.html
@@ -16,34 +16,83 @@
     <hr />
 
     <ol>
-      <li> Javascript in the Browser</li>
-      
-      <ul>
-        <li> Javascript Variables
-          <a href="./shecodes.io-week2/variables.js"> </a><br/>
-        </li>
-        <li> Javascript Variables Challenge
-          <a href="./shecodes.io-week2/variables-Challenge.js"> </a><br/>
-        </li>
-      </ul>
-      <ul>
-        <li> Javascript in html
-          <a href=""> </a><br/>
-        </li>
-        <li>Javascript in html Challenge
-          <a href=""> </a><br/>
-        </li>
-      </ul>
-      <li></li>
+      <li>Javascript in the Browser</li>
+
       <ul>
         <li>
-          <a href=""> </a><br/>
+          Javascript Variables <a href="./shecodes.io-week2/variables.js"> </a
+          ><br />
+        </li>
+        <li>
+          Javascript Variables Challenge
+          <a href="./shecodes.io-week2/variables-Challenge.js"> </a><br />
         </li>
       </ul>
-      
+      <ul>
+        <li>
+          Javascript in html <a href="./shecodes.io-week2/jsInHTML.html"> </a
+          ><br />
+        </li>
+        <li>
+          Javascript in html Challenge
+          <a href="./shecodes.io-week2/jsInHTML-Challenge.html"> </a><br />
+        </li>
+      </ul>
+
+      <ul>
+        <li>
+          Javascript if Statements
+          <a href="./shecodes.io-week2/jsIfStatement.html"> </a><br />
+        </li>
+        <li>
+          Javascript if Statements Challenge
+          <a href="./shecodes.io-week2/jsIfStatement-Challenge.html"> </a><br />
+        </li>
+      </ul>
+      <ul>
+        <li>
+          Javascript If Else Statements
+          <a href=" ./shecodes.io-week2/jsIfElse.html"> </a><br />
+        </li>
+
+        <li>Javascript If Else Statements - Challenge</li>
+        <a href="./shecodes.io-week2/jsIfElse-Challenge.html"> </a
+        ><br />
+      </ul>
+      <ul>
+        <li>
+          Javascript Logical Operators<a
+            href="./shecodes.io-week2/jsLogicalOperators.html"
+          >
+          </a
+          ><br />
+        </li>
+        <li>
+          Javascript Logical Operators-Challenge<a
+            href="./shecodes.io-week2/jsLogicalOperators-Challenge.html"
+          >
+          </a
+          ><br />
+        </li>
+      </ul>
+      <ul>
+        <li><a href=""> </a><br /></li>
+        <li><a href=""> </a><br /></li>
+      </ul>
+      <ul>
+        <li><a href=""> </a><br /></li>
+        <li><a href=""> </a><br /></li>
+      </ul>
+      <ul>
+        <li><a href=""> </a><br /></li>
+        <li><a href=""> </a><br /></li>
+      </ul>
       <li>
-        <a href="https://github.com/DionneNoellaBarretto/shecodes.io-week1/blob/main/hw2.html"
-        > HW2</a>
+        <a
+          href="https://github.com/DionneNoellaBarretto/shecodes.io-week1/blob/main/hw2.html"
+        >
+          HW2</a
+        >
       </li>
       <li>
         <a href="">Prof Solution</a>
