--- a/index.html
+++ b/index.html
@@ -76,16 +76,20 @@
         </li>
       </ul>
       <ul>
-        <li><a href=""> </a><br /></li>
-        <li><a href=""> </a><br /></li>
+        <li>Javascript Functions<a href="./shecodes.io-week2/jsFunctions.html"> </a><br /></li>
+        <li>Javascript Functions - Challenge<a href="./shecodes.io-week2/jsFunctions-Challenge.html"> </a><br /></li>
       </ul>
       <ul>
-        <li><a href=""> </a><br /></li>
-        <li><a href=""> </a><br /></li>
+        <li>Javascript Selectors<a href="./shecodes.io-week2/jsSelectors.html"> </a><br /></li>
+        <li>Javascript Selectors -Challenge<a href="./shecodes.io-week2/jsSelectors-Challenge.html"> </a><br /></li>
       </ul>
       <ul>
-        <li><a href=""> </a><br /></li>
-        <li><a href=""> </a><br /></li>
+        <li>Javascript Events<a href="./shecodes.io-week2/jsEvents.html"> </a><br /></li>
+        <li>Javascript Events -Challenge<a href="./shecodes.io-week2/jsEvents-Challenge.html"> </a><br /></li>
+      </ul>
+      <ul>
+        <li>Javascript Refactoring<a href="./shecodes.io-week2/jsRefactoring.html"> </a><br /></li>
+        <li>Javascript Refactoring -Challenge<a href="./shecodes.io-week2/jsRefactoring-Challenge.html"> </a><br /></li>
       </ul>
       <li>
         <a
