--- a/jsSelectors.html
+++ b/jsSelectors.html
@@ -30,3 +30,22 @@
 </html>
 
 <!-- document is a variable in console created everytime a page loads!  -->
+
+<!-- document.write("hello")  will replace the whole document with  hello in your browser!-->
+
+<!-- document.querySelector("h1"); gives you back  h1 sections! -->
+
+<!-- document.querySelector("ul"); gives you back  ul sections -->
+
+<!-- document.querySelector(".advanced"); returns  classes with advanced sections.. -->
+
+<!-- document.querySelectorAll(".free"); returns all classes with free sections -->
+
+<!-- click
+mouseenter
+mouseleave
+mousedown
+mouseup
+mousemove
+keydown
+keyup -->
