index links updated

--- a/index.html
+++ b/index.html
@@ -1,106 +1,106 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>SheCodes.io Week2</title>
-  </head>
-  <body>
-    <h1>SheCodes.IO</h1>
-    <h2>
-      Taught by:
-      <a href="https://www.linkedin.com/in/mattdelac/">Matthieu (Matt) Delac</a>
-    </h2>
 
-    <hr />
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>SheCodes.io Week2</title>
+</head>
 
-    <ol>
-      <li>Javascript in the Browser</li>
-
-      <ul>
-        <li>
-          Javascript Variables <a href="./shecodes.io-week2/variables.js"> </a
-          ><br />
-        </li>
-        <li>
-          Javascript Variables Challenge
-          <a href="./shecodes.io-week2/variables-Challenge.js"> </a><br />
-        </li>
-      </ul>
-      <ul>
-        <li>
-          Javascript in html <a href="./shecodes.io-week2/jsInHTML.html"> </a
-          ><br />
-        </li>
-        <li>
-          Javascript in html Challenge
-          <a href="./shecodes.io-week2/jsInHTML-Challenge.html"> </a><br />
-        </li>
-      </ul>
-
-      <ul>
-        <li>
-          Javascript if Statements
-          <a href="./shecodes.io-week2/jsIfStatement.html"> </a><br />
-        </li>
-        <li>
-          Javascript if Statements Challenge
-          <a href="./shecodes.io-week2/jsIfStatement-Challenge.html"> </a><br />
-        </li>
-      </ul>
-      <ul>
-        <li>
-          Javascript If Else Statements
-          <a href=" ./shecodes.io-week2/jsIfElse.html"> </a><br />
-        </li>
-
-        <li>Javascript If Else Statements - Challenge</li>
-        <a href="./shecodes.io-week2/jsIfElse-Challenge.html"> </a
-        ><br />
-      </ul>
-      <ul>
-        <li>
-          Javascript Logical Operators<a
-            href="./shecodes.io-week2/jsLogicalOperators.html"
-          >
-          </a
-          ><br />
-        </li>
-        <li>
-          Javascript Logical Operators-Challenge<a
-            href="./shecodes.io-week2/jsLogicalOperators-Challenge.html"
-          >
-          </a
-          ><br />
-        </li>
-      </ul>
-      <ul>
-        <li>Javascript Functions<a href="./shecodes.io-week2/jsFunctions.html"> </a><br /></li>
-        <li>Javascript Functions - Challenge<a href="./shecodes.io-week2/jsFunctions-Challenge.html"> </a><br /></li>
-      </ul>
-      <ul>
-        <li>Javascript Selectors<a href="./shecodes.io-week2/jsSelectors.html"> </a><br /></li>
-        <li>Javascript Selectors -Challenge<a href="./shecodes.io-week2/jsSelectors-Challenge.html"> </a><br /></li>
-      </ul>
-      <ul>
-        <li>Javascript Events<a href="./shecodes.io-week2/jsEvents.html"> </a><br /></li>
-        <li>Javascript Events -Challenge<a href="./shecodes.io-week2/jsEvents-Challenge.html"> </a><br /></li>
-      </ul>
-      <ul>
-        <li>Javascript Refactoring<a href="./shecodes.io-week2/jsRefactoring.html"> </a><br /></li>
-        
-      </ul>
+<body>
+  <h1>SheCodes.IO</h1>
+  <h2>
+    Taught by:
+    <a href="https://www.linkedin.com/in/mattdelac/">Matthieu (Matt) Delac</a>
+  </h2>
+  <hr />
+  <ol>
+    <li>Javascript in the Browser</li>
+    <ul>
       <li>
-        <a
-          href="https://github.com/DionneNoellaBarretto/shecodes.io-week1/blob/main/hw2.html"
-        >
-          HW2</a
-        >
+        <a href="./shecodes.io-week2/variables.js"> Javascript Variables </a><br />
       </li>
       <li>
-        <a href="">Prof Solution</a>
+        <a href="./shecodes.io-week2/variables-Challenge.js">
+          Javascript Variables Challenge </a><br />
       </li>
-    </ol>
-  </body>
+    </ul>
+    <ul>
+      <li>
+        <a href="./shecodes.io-week2/jsInHTML.html"> Javascript in html </a><br />
+      </li>
+      <li>
+        <a href="./shecodes.io-week2/jsInHTML-Challenge.html">
+          Javascript in html Challenge </a><br />
+      </li>
+    </ul>
+    <ul>
+      <li>
+        <a href="./shecodes.io-week2/jsIfStatement.html">Javascript if Statements </a><br />
+      </li>
+      <li>
+        <a href="./shecodes.io-week2/jsIfStatement-Challenge.html">
+          Javascript if Statements Challenge</a><br />
+      </li>
+    </ul>
+    <ul>
+      <li>
+        <a href=" ./shecodes.io-week2/jsIfElse.html">
+          Javascript If Else Statements </a><br />
+      </li>
+      <li></li>
+      <a href="./shecodes.io-week2/jsIfElse-Challenge.html">Javascript If Else Statements - Challenge </a><br />
+    </ul>
+    <ul>
+      <li>
+        <a href="./shecodes.io-week2/jsLogicalOperators.html">Javascript Logical Operators </a><br />
+      </li>
+      <li>
+        <a href="./shecodes.io-week2/jsLogicalOperators-Challenge.html">Javascript Logical Operators-Challenge
+        </a><br />
+      </li>
+    </ul>
+    <ul>
+      <li>
+        <a href="./shecodes.io-week2/jsFunctions.html">Javascript Functions </a><br />
+      </li>
+      <li>
+        <a href="./shecodes.io-week2/jsFunctions-Challenge.html">Javascript Functions - Challenge </a><br />
+      </li>
+    </ul>
+    <ul>
+      <li>
+        <a href="./shecodes.io-week2/jsSelectors.html">Javascript Selectors </a><br />
+      </li>
+      <li>
+        <a href="./shecodes.io-week2/jsSelectors-Challenge.html">
+          Javascript Selectors -Challenge</a><br />
+      </li>
+    </ul>
+    <ul>
+      <li>
+        <a href="./shecodes.io-week2/jsEvents.html"> Javascript Events</a><br />
+      </li>
+      <li>
+        <a href="./shecodes.io-week2/jsEvents-Challenge.html">
+          Javascript Events -Challenge</a><br />
+      </li>
+    </ul>
+    <ul>
+      <li>
+        <a href="./shecodes.io-week2/jsRefactoring.html">
+          Javascript Refactoring</a><br />
+      </li>
+    </ul>
+    <li>
+      <a href="https://github.com/DionneNoellaBarretto/shecodes.io-week1/blob/main/hw2.html">
+        HW2</a>
+    </li>
+    <li>
+      <a href="">Prof Solution</a>
+    </li>
+  </ol>
+</body>
+
 </html>
