index links updated

--- a/index.html
+++ b/index.html
@@ -1,106 +1,165 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>SheCodes.io Week2</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>SheCodes.io Week2</title>
-</head>
-
-<body>
-  <h1>SheCodes.IO</h1>
-  <h2>
-    Taught by:
-    <a href="https://www.linkedin.com/in/mattdelac/">Matthieu (Matt) Delac</a>
-  </h2>
-  <hr />
-  <ol>
-    <li>Javascript in the Browser</li>
-    <ul>
-      <li>
-        <a href="./shecodes.io-week2/variables.js"> Javascript Variables </a><br />
-      </li>
-      <li>
-        <a href="./shecodes.io-week2/variables-Challenge.js">
-          Javascript Variables Challenge </a><br />
-      </li>
-    </ul>
-    <ul>
-      <li>
-        <a href="./shecodes.io-week2/jsInHTML.html"> Javascript in html </a><br />
-      </li>
-      <li>
-        <a href="./shecodes.io-week2/jsInHTML-Challenge.html">
-          Javascript in html Challenge </a><br />
-      </li>
-    </ul>
-    <ul>
-      <li>
-        <a href="./shecodes.io-week2/jsIfStatement.html">Javascript if Statements </a><br />
-      </li>
-      <li>
-        <a href="./shecodes.io-week2/jsIfStatement-Challenge.html">
-          Javascript if Statements Challenge</a><br />
-      </li>
-    </ul>
-    <ul>
-      <li>
-        <a href=" ./shecodes.io-week2/jsIfElse.html">
-          Javascript If Else Statements </a><br />
-      </li>
-      <li></li>
-      <a href="./shecodes.io-week2/jsIfElse-Challenge.html">Javascript If Else Statements - Challenge </a><br />
-    </ul>
-    <ul>
-      <li>
-        <a href="./shecodes.io-week2/jsLogicalOperators.html">Javascript Logical Operators </a><br />
-      </li>
-      <li>
-        <a href="./shecodes.io-week2/jsLogicalOperators-Challenge.html">Javascript Logical Operators-Challenge
-        </a><br />
-      </li>
-    </ul>
-    <ul>
-      <li>
-        <a href="./shecodes.io-week2/jsFunctions.html">Javascript Functions </a><br />
-      </li>
-      <li>
-        <a href="./shecodes.io-week2/jsFunctions-Challenge.html">Javascript Functions - Challenge </a><br />
-      </li>
-    </ul>
-    <ul>
-      <li>
-        <a href="./shecodes.io-week2/jsSelectors.html">Javascript Selectors </a><br />
-      </li>
-      <li>
-        <a href="./shecodes.io-week2/jsSelectors-Challenge.html">
-          Javascript Selectors -Challenge</a><br />
-      </li>
-    </ul>
-    <ul>
-      <li>
-        <a href="./shecodes.io-week2/jsEvents.html"> Javascript Events</a><br />
-      </li>
-      <li>
-        <a href="./shecodes.io-week2/jsEvents-Challenge.html">
-          Javascript Events -Challenge</a><br />
-      </li>
-    </ul>
-    <ul>
-      <li>
-        <a href="./shecodes.io-week2/jsRefactoring.html">
-          Javascript Refactoring</a><br />
-      </li>
-    </ul>
-    <li>
-      <a href="https://github.com/DionneNoellaBarretto/shecodes.io-week1/blob/main/hw2.html">
-        HW2</a>
-    </li>
-    <li>
-      <a href="">Prof Solution</a>
-    </li>
-  </ol>
-</body>
-
+  <body>
+    <h1>SheCodes.IO</h1>
+    <h2>
+      Taught by:
+      <a href="https://www.linkedin.com/in/mattdelac/">Matthieu (Matt) Delac</a>
+    </h2>
+    <hr />
+    <ol>
+      <li>Javascript in the Browser</li>
+      <ul>
+        <li>
+          <a
+            href="https://github.com/DionneNoellaBarretto/shecodes.io-week2/blob/main/variables.js"
+          >
+            Javascript Variables </a
+          ><br />
+        </li>
+        <li>
+          <a
+            href="https://github.com/DionneNoellaBarretto/shecodes.io-week2/blob/main/variables-Challenge.js"
+          >
+            Javascript Variables Challenge </a
+          ><br />
+        </li>
+      </ul>
+      <ul>
+        <li>
+          <a
+            href="https://github.com/DionneNoellaBarretto/shecodes.io-week2/blob/main/jsInHTML.html"
+          >
+            Javascript in html </a
+          ><br />
+        </li>
+        <li>
+          <a
+            href="https://github.com/DionneNoellaBarretto/shecodes.io-week2/blob/main/jsInHTML-Challenge.html"
+          >
+            Javascript in html Challenge </a
+          ><br />
+        </li>
+      </ul>
+      <ul>
+        <li>
+          <a
+            href="https://github.com/DionneNoellaBarretto/shecodes.io-week2/blob/main/jsIfStatement.html"
+            >Javascript if Statements </a
+          ><br />
+        </li>
+        <li>
+          <a
+            href="https://github.com/DionneNoellaBarretto/shecodes.io-week2/blob/main/jsIfStatement-Challenge.html"
+          >
+            Javascript if Statements Challenge</a
+          ><br />
+        </li>
+      </ul>
+      <ul>
+        <li>
+          <a
+            href="https://github.com/DionneNoellaBarretto/shecodes.io-week2/blob/main/jsIfElse.html"
+          >
+            Javascript If Else Statements </a
+          ><br />
+        </li>
+        <li></li>
+        <a
+          href="https://github.com/DionneNoellaBarretto/shecodes.io-week2/blob/main/jsIfElse-Challenge.html"
+          >Javascript If Else Statements - Challenge </a
+        ><br />
+      </ul>
+      <ul>
+        <li>
+          <a
+            href="https://github.com/DionneNoellaBarretto/shecodes.io-week2/blob/main/jsLogicalOperators.html"
+            >Javascript Logical Operators </a
+          ><br />
+        </li>
+        <li>
+          <a
+            href="https://github.com/DionneNoellaBarretto/shecodes.io-week2/blob/main/jsLogicalOperators-Challenge.html"
+            >Javascript Logical Operators-Challenge </a
+          ><br />
+        </li>
+      </ul>
+      <ul>
+        <li>
+          <a
+            href="https://github.com/DionneNoellaBarretto/shecodes.io-week2/blob/main/jsFunctions.html"
+            >Javascript Functions </a
+          ><br />
+        </li>
+        <li>
+          <a
+            href="https://github.com/DionneNoellaBarretto/shecodes.io-week2/blob/main/jsFunctions-Challenge.html"
+            >Javascript Functions - Challenge </a
+          ><br />
+        </li>
+      </ul>
+      <ul>
+        <li>
+          <a
+            href="https://github.com/DionneNoellaBarretto/shecodes.io-week2/blob/main/jsSelectors.html"
+            >Javascript Selectors </a
+          ><br />
+        </li>
+        <li>
+          <a
+            href="https://github.com/DionneNoellaBarretto/shecodes.io-week2/blob/main/jsSelectors-Challenge.html"
+          >
+            Javascript Selectors -Challenge</a
+          ><br />
+        </li>
+      </ul>
+      <ul>
+        <li>
+          <a
+            href="https://github.com/DionneNoellaBarretto/shecodes.io-week2/blob/main/jsEvents.html"
+          >
+            Javascript Events</a
+          ><br />
+        </li>
+        <li>
+          <a
+            href="https://github.com/DionneNoellaBarretto/shecodes.io-week2/blob/main/jsEvents-Challenge.html"
+          >
+            Javascript Events -Challenge</a
+          ><br />
+        </li>
+      </ul>
+      <ul>
+        <li>
+          <a
+            href="https://github.com/DionneNoellaBarretto/shecodes.io-week2/blob/main/jsRefactoring.html"
+          >
+            Javascript Refactoring</a
+          ><br />
+        </li>
+      </ul>
+      <ul>
+        <li>
+          <a
+            href="https://github.com/DionneNoellaBarretto/shecodes.io-week2/blob/main/hw2.html"
+          >
+            HW2</a
+          >
+        </li>
+        <li>
+          <a
+            href="https://gist.github.com/matthieua/c67de99135528487ed789bdfc9c58114"
+            >Prof Solution</a
+          >
+        </li>
+      </ul>
+    </ol>
+  </body>
 </html>
