--- a/hw2.html
+++ b/hw2.html
@@ -1,155 +1,160 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Weather App</title>
-    <style>
-      h1,
-      h2,
-      h3 {
-        text-align: center;
-        font-family: Helvetica, Arial, sans-serif;
-      }
 
-      h1 {
-        color: #1a64d6;
-        font-size: 34px;
-        line-height: 48px;
-        margin: 0;
-      }
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <title>Weather App</title>
+  <style>
+    h1,
+    h2,
+    h3 {
+      text-align: center;
+      font-family: Helvetica, Arial, sans-serif;
+    }
 
-      h2 {
-        margin: 0;
+    h1 {
+      color: #1a64d6;
+      font-size: 34px;
+      line-height: 48px;
+      margin: 0;
+    }
 
-        font-size: 34px;
-        line-height: 48px;
-        font-weight: 400;
-      }
+    h2 {
+      margin: 0;
 
-      ul {
-        padding: 0;
-      }
+      font-size: 34px;
+      line-height: 48px;
+      font-weight: 400;
+    }
 
-      li {
-        list-style: none;
-        text-align: center;
-        padding: 10px 0;
-        border-radius: 10px;
-        transition: all 200ms ease-in-out;
-        max-width: 400px;
-        margin: 0 auto;
-      }
+    ul {
+      padding: 0;
+    }
 
-      li:hover {
-        background: #fffbef;
-      }
+    li {
+      list-style: none;
+      text-align: center;
+      padding: 10px 0;
+      border-radius: 10px;
+      transition: all 200ms ease-in-out;
+      max-width: 400px;
+      margin: 0 auto;
+    }
 
-      p {
-        font-size: 18px;
-        opacity: 0.7;
-        text-align: center;
-        font-family: monospace;
-      }
+    li:hover {
+      background: #fffbef;
+    }
 
-      button {
-        display: block;
-        margin: 20px auto;
-        border: 1px solid #1a64d6;
-        background: #1a64d6;
-        color: #fff;
-        font-size: 16px;
-        line-height: 22px;
-        padding: 16px 24px;
-        border-radius: 30px;
-        transition: all 200ms ease;
-        box-shadow: rgba(37, 39, 89, 0.08) 0px 8px 8px 0;
-        cursor: pointer;
-      }
+    p {
+      font-size: 18px;
+      opacity: 0.7;
+      text-align: center;
+      font-family: monospace;
+    }
 
-      button:hover {
-        background: white;
-        color: #1a64d6;
-        border: 1px solid #1a64d6;
-      }
+    button {
+      display: block;
+      margin: 20px auto;
+      border: 1px solid #1a64d6;
+      background: #1a64d6;
+      color: #fff;
+      font-size: 16px;
+      line-height: 22px;
+      padding: 16px 24px;
+      border-radius: 30px;
+      transition: all 200ms ease;
+      box-shadow: rgba(37, 39, 89, 0.08) 0px 8px 8px 0;
+      cursor: pointer;
+    }
 
-      .footer {
-        font-size: 18px;
-        font-family: monospace;
-        padding: 15px;
-        text-align: center;
-        opacity: 0.7;
-      }
-    </style>
-  </head>
+    button:hover {
+      background: white;
+      color: #1a64d6;
+      border: 1px solid #1a64d6;
+    }
 
-  <body>
-    <h1>
-      🌤
-      <br />
-      Currently 21° in Tokyo
-    </h1>
-    <h2 class="cel">13° / <strong class="far">23°</strong></h2>
-    <ul>
-      <li>
-        <h3>🌧Tomorrow</h3>
-        <p class="ctempTom">10° / <strong class="ftempTom">22°</strong></p>
-      </li>
-      <li>
-        <h3>🌥 Saturday</h3>
-        <p class="ctemSat">15° / <strong class="ftempSat">17°</strong></p>
-      </li>
-      <li>
-        <h3>☀️ Sunday</h3>
-        <p class="ctempSun">25° / <strong class="ftempSun">28°</strong></p>
-      </li>
-    </ul>
+    .footer {
+      font-size: 18px;
+      font-family: monospace;
+      padding: 15px;
+      text-align: center;
+      opacity: 0.7;
+    }
+  </style>
+</head>
 
-    <button>Change city</button>
-    <div class="footer">
-      Coded by
-      <span><a href="https://dionnenoellabarretto.github.io/">DNB</a></span>
-    </div>
+<body>
+  <h1>
+    🌤
+    <br />
+    Currently 21° in Tokyo
+  </h1>
+  <h2>13° / <strong>23°</strong></h2>
+  <ul>
+    <li>
+      <h3>🌧Tomorrow</h3>
+      <p>10° / <strong>22°</strong></p>
+    </li>
+    <li>
+      <h3>🌥 Saturday</h3>
+      <p>15° / <strong>17°</strong></p>
+    </li>
+    <li>
+      <h3>☀️ Sunday</h3>
+      <p>25° / <strong>28°</strong></p>
+    </li>
+  </ul>
 
-    <script>
-      function weather() {
-        let h1 = document.querySelector("h1");
-        let city = prompt("What is your location?");
+  <button>Change city</button>
+  <div class="footer">
+    Coded by
+    <span><a href="https://dionnenoellabarretto.github.io/">DNB</a></span>
+  </div>
+
+  <script>
+    // update heading function refactored
+    function updateH1(newH1) {
+      let h1 = document.querySelector("h1");
+      h1.innerHTML = newH1;
+    }
+
+    function validCity() {
+      let city = prompt("What is your location?");
+      // is user cancels or empty( https://stackoverflow.com/questions/20533127/detect-empty-value-on-prompt)
+      if (city != null || city != "" || !isNaN(city)) {
         // camel case city name
         city = city.charAt(0).toUpperCase() + city.substr(1).toLowerCase();
-        let fTemp = prompt("What is the temperature in °F?");
-
-        // https://www.w3resource.com/javascript-exercises/javascript-basic-exercise-11.php , rounding off (https://www.delftstack.com/howto/javascript/javascript-round-to-2-decimal-places/) to the nearest 2 digits
-        let cTemp = (((fTemp - 32) * 5) / 9).toFixed(2);
-
-        // is user cancels or empty( https://stackoverflow.com/questions/20533127/detect-empty-value-on-prompt)
-        // if 0°C or 32°F
-        if ((cTemp >= 0 && cTemp <= 100) || (fTemp > 32 && fTemp <= 212)) {
-          h1.innerHTML = `🌞 <br /> It's currently ${fTemp}<em>°F</em> / ${cTemp}<em>°C</em> in ${city}`
-        } else if (cTemp < 0 || fTemp <= 32) {
-          h1.innerHTML = `🥶 <br/> It's currently ${fTemp}<em>°F</em>  / ${cTemp}<em>°C</em> in ${city}`
-        }
-// empty//null check logic
-        //   if (
-        //     city == null ||
-        //     city === "" ||
-        //     fTemp == null ||
-        //     fTemp === "" ||
-        //     isNaN(fTemp) ||
-        //     isNaN(city)
-        //   ) {
-        //     h1.innerHTML = `You must enter a city and its temperature in <em>°F</em>! Please refresh the browser and try again!`
-        //  }
-        // else {
-        //   document.innerHTML = `You must enter a city and its temperature in <em>°F</em>! Please refresh the browser and try again!`
-        // }
+        return city;
+      } else if (city == null || city == "" || isNaN(city)) {
+        return updateH1(
+          `Error! You must enter a city name using [A-Z / [a-z]] ! Please refresh the browser and try again!`
+        );
       }
+    }
 
-      let Button = document.querySelector("button");
-      Button.addEventListener("click", weather);
-    </script>
-  </body>
+    function weatherUpdate() {
+      let fTemp = prompt("What is the temperature in °F?");
+      // https://www.w3resource.com/javascript-exercises/javascript-basic-exercise-11.php , rounding off (https://www.delftstack.com/howto/javascript/javascript-round-to-2-decimal-places/) to the nearest 2 digits
+      let cTemp = (((fTemp - 32) * 5) / 9).toFixed(2);
+      // if 0°C or 32°F
+      if ((cTemp >= 0 && cTemp <= 100) || (fTemp > 32 && fTemp <= 212)) {
+        updateH1(
+          `🌞 <br /> It's currently ${fTemp}<em>°F</em> / ${cTemp}<em>°C</em> in ${validCity()}`
+        );
+      } else if (cTemp < 0 || fTemp <= 32) {
+        updateH1(
+          `🥶 <br/> It's currently ${fTemp}<em>°F</em>  / ${cTemp}<em>°C</em> in ${validCity()}`
+        );
+      }
+    }
+
+    let Button = document.querySelector("button");
+    Button.addEventListener("click", weatherUpdate);
+  </script>
+</body>
+
 </html>
 
 <!-- Prof Solution: https://gist.github.com/matthieua/c67de99135528487ed789bdfc9c58114 <!DOCTYPE html>
